feat: add basic api handling
